# ELViewer

./: .gitignore  Cargo.toml  Makefile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  Router.tsx  main.rs  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/modules/: mod.rs
src-tauri/modules/data_structs/: log.rs  player.rs
src-tauri/src/: main.rs
src-tauri/src/modules/: mod.rs  parser.rs
src-tauri/src/modules/data_structs/: abilities.rs  combat.rs  log.rs  player.rs
src-tauri/src/modules/log/: log.rs  mod.rs
src-tauri/src/modules/log/data_structs/: combat.rs  mod.rs  units.rs  zone.rs
src-tauri/src/modules/parser/: mod.rs
src-tauri/src/modules/parser/data_structs/: abilities.rs  combat.rs  log.rs  mod.rs  player.rs
src/components/: Header.tsx
src/contexts/: Parser.tsx  Taurpc.tsx
src/modules/: backend.rs  channel.rs  frontend.rs  mod.rs  parser.rs
src/modules/data_structs/: abilities.rs  combat.rs  log.rs  mod.rs  player.rs
src/modules/ui/: entry.rs  mod.rs
src/modules/ui/upload/: button.rs  mod.rs  upload.ui
src/views/: Processed.tsx  Processing.tsx
